# RayTracer-CGyAV

./: .gitignore  CMakeLists.txt  README.md
docs/: consigna.md
src/: main.cpp
src/camera/: Camera.h
src/core/: Ray.h  Vec3.h
src/geometry/: Hittable.h  Plane.h  Sphere.h  Triangle.h
src/lights/: PointLight.h
src/materials/: Material.h
src/renderer/: Integrator.h  Renderer.h
src/scene/: Scene.h
src/utils/: ImageWriterAuto.h  ImageWriterPPM.h  Random.h
